--- a/react_gallary/package.json
+++ b/react_gallary/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "aws-amplify": "^3.0.23",
+    "aws-amplify": "^3.0.24",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "webpack-dev-server": "^3.11.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
