modified gitignore and deleted react aws s3

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 backend/.env
-react_gallary/src/robin_component/S3.js
+# react_gallary/src/robin_component/S3.js
+/react_gallary/src/robin_component/S3.js
